Fixed Hanging Animation Bugs * Migrated containers to LinkedLists (from ArrayLists)